[metadata]
name = fairstream-BSI
version = 0.0.1
author = BSI Team
author_email = zwb6kg@virginia.edu
description = Pipeline for processing multivariate timeseries medical data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UVA-CAMA/FAIRStream
project_urls =
    Bug Tracker = https://github.com/UVA-CAMA/FAIRStream/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src